# noise_revenger

./: BUILDING.md  PROJECT_DESCRIPTION.md  README.md  build.bat  diagnose.py  generate_sounds.py  main.py  noise_revenger.spec  pyproject.toml  version_info.txt
config/: settings.yaml
logs/: noise_events.jsonl  noise_events_2026-05-15.csv  noise_events_2026-05-21.csv
src/: audio_capture.py  config.py  feedback_player.py  gui.py  logger.py  paths.py
src/noise_detector/: engine.py  high_freq.py  low_freq.py
tests/: test_config.py  test_integration.py  test_logger.py  test_noise_detector.py
